force-app/main/default/objects/SPEN_Zone__c/SPEN_Zone__c.object-meta.xml
<CustomObject>
    <label>Zone</label>
    <nameField>
        <label>Zone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zone</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>