force-app/main/default/objects/SPEN_Zone__c/fields/SPEN_BroadcastMessage__c.field-meta.xml
<CustomField>
    <fullName>SPEN_BroadcastMessage__c</fullName>
    <label>IVR  Message Assigned</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>