force-app/main/default/objects/SPEN_Zone__c/fields/SPEN_IVRMessage__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IVRMessage__c</fullName>
    <label>IVR Message Temporary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>