force-app/main/default/objects/SPEN_Zone__c/fields/SPEN_IVRMessageTemplate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IVRMessageTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IVR Message Template</label>
    <referenceTo>SPEN_IVRMessage__c</referenceTo>
    <relationshipLabel>Zone</relationshipLabel>
    <relationshipName>Zone</relationshipName>
    <type>Lookup</type>
</CustomField>