force-app/main/default/objects/SPEN_Zone__c/fields/SPEN_IVRTemplateBody__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IVRTemplateBody__c</fullName>
    <label>IVR Template Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>