force-app/main/default/objects/SPEN_Zone__c/fields/SPEN_OverwriteToChild__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OverwriteToChild__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overwrite To Child</label>
    <type>Checkbox</type>
</CustomField>