force-app/main/default/objects/SPEN_Zone__c/fields/SPEN_Parent__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>SPEN_Zone__c</referenceTo>
    <relationshipLabel>Zone</relationshipLabel>
    <relationshipName>Zone</relationshipName>
    <type>Lookup</type>
</CustomField>