force-app/main/default/objects/SPEN_Zone__c/fields/SPEN_Type__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Region</fullName>
            </value>
            <value>
                <fullName>District</fullName>
            </value>
            <value>
                <fullName>Zone</fullName>
            </value>
            <value>
                <fullName>Town</fullName>
            </value>
            <value>
                <fullName>Blanket</fullName>
                <isActive>false</isActive>
                <label>Blanket</label>
            </value>
            <value>
                <fullName>World</fullName>
                <isActive>false</isActive>
                <label>World</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>