force-app/main/default/objects/SPEN_Zone__c/fields/SPEN_Zone_District_Formula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Zone_District_Formula__c</fullName>
    <description>Analogue to &quot;Zone Region&quot;, this holds the name of the parent record of this zone, as long as the record is of type &quot;Zone&quot;.  --&gt; Zone hierachy:  town -&gt; zone -&gt; district -&gt; region.</description>
    <formula>IF( 
    ISPICKVAL(SPEN_Type__c , &quot;Zone&quot;), 
    SPEN_Parent__r.Name ,
    &quot;NA&quot;)</formula>
    <label>Zone District</label>
    <type>Text</type>
</CustomField>