force-app/main/default/objects/SPEN_Zone__c/fields/SPEN_ZoneRegionFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ZoneRegionFormula__c</fullName>
    <formula>IF( ISPICKVAL(SPEN_Type__c , &quot;Zone&quot;), SPEN_Parent__r.SPEN_Parent__r.Name ,&quot;NA&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zone Region</label>
    <type>Text</type>
</CustomField>