force-app/main/default/objects/SPEN_Zone__c/validationRules/SPEN_Agent_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_Agent_Validation</fullName>
    <active>true</active>
    <description>Prevent Agent to edit the Zone Name Value</description>
    <errorConditionFormula>AND( $Profile.Name = &apos;SPEN Agent&apos;, PRIORVALUE(Name) &lt;&gt; Name )</errorConditionFormula>
    <errorMessage>Your profile doesn&apos;t have a permission to edit the Zone Name</errorMessage>
</ValidationRule>