force-app/main/default/objects/SPEN_Zone__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_Parent__c</columns>
    <columns>SPEN_Type__c</columns>
    <columns>SPEN_ZoneRegionFormula__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPEN_SPD_SPM__c</field>
        <operation>equals</operation>
        <value>SPD</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
</ListView>