force-app/main/default/objects/SPEN_Zone__c/listViews/District.listView-meta.xml
<ListView>
    <fullName>District</fullName>
    <columns>NAME</columns>
    <columns>SPEN_BroadcastMessage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPEN_Type__c</field>
        <operation>equals</operation>
        <value>District</value>
    </filters>
    <label>District</label>
</ListView>