force-app/main/default/objects/SPEN_Zone__c/listViews/Region.listView-meta.xml
<ListView>
    <fullName>Region</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPEN_Type__c</field>
        <operation>equals</operation>
        <value>Region</value>
    </filters>
    <label>Region</label>
</ListView>