force-app/main/default/objects/SPEN_Zone__c/listViews/Town.listView-meta.xml
<ListView>
    <fullName>Town</fullName>
    <columns>NAME</columns>
    <columns>SPEN_Type__c</columns>
    <columns>SPEN_IVRMessageTemplate__c</columns>
    <columns>SPEN_BroadcastMessage__c</columns>
    <columns>SPEN_Parent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPEN_Type__c</field>
        <operation>equals</operation>
        <value>Town</value>
    </filters>
    <label>Town</label>
</ListView>